# ChangeLog for dev-python/pmw
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pmw/ChangeLog,v 1.40 2013/09/05 18:46:47 mgorny Exp $

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> pmw-1.3.3.ebuild,
  pmw-2.0.0.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  10 May 2013; Patrick Lauer <patrick@gentoo.org> pmw-1.3.3.ebuild,
  pmw-2.0.0.ebuild:
  Quoting

  06 Feb 2013; Ian Delaney <idella4@gentoo.org> pmw-1.3.3.ebuild,
  pmw-2.0.0.ebuild:
  Added test phase to 1.3.3 & 2.0.0 while restricting tests due to it doesn't
  work, dropped unusable 1.3 patches from -2.0.0, added required conversion to
  py3 code state in -2.0.0, fixed doc install fixing Bug #454974 by Juergen Rose

  29 Jan 2013; Justin Lecher <jlec@gentoo.org> pmw-1.3.2-r2.ebuild,
  pmw-1.3.3.ebuild, pmw-2.0.0.ebuild:
  Correct SLOTs, #453570

*pmw-2.0.0 (21 Jan 2013)
*pmw-1.3.3 (21 Jan 2013)

  21 Jan 2013; Justin Lecher <jlec@gentoo.org> +pmw-1.3.3.ebuild,
  +pmw-2.0.0.ebuild, metadata.xml:
  Version Bump

  21 Feb 2012; Patrick Lauer <patrick@gentoo.org> pmw-1.3.2-r2.ebuild:
  Restricting jython

  20 Feb 2012; Patrick Lauer <patrick@gentoo.org> pmw-1.3.2-r2.ebuild:
  Restricting pypy #403801

  21 Nov 2011; Justin Lecher <jlec@gentoo.org> pmw-1.3.2-r2.ebuild:
  keyworded for ~x86-macos ~x64-macos, tested by Johan Hattne #390123

  30 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pmw-1.3.2-r2.ebuild:
  Update EAPI. Fix dependencies.

  08 Jun 2010; Markos Chandras <hwoarang@gentoo.org> pmw-1.3.2-r2.ebuild:
  Stable on amd64 wrt bug #310775

  24 May 2010; Raúl Porcel <armin76@gentoo.org> pmw-1.3.2-r2.ebuild:
  alpha/ia64/sparc/x86 stable wrt #310775

  18 Apr 2010; <nixnut@gentoo.org> pmw-1.3.2-r2.ebuild:
  ppc stable #310775

  26 Feb 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pmw-1.3.2-r2.ebuild:
  Set SUPPORT_PYTHON_ABIS.

*pmw-1.3.2-r2 (20 Feb 2010)
