@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX 1.3.2-python2.5.patch 2030 SHA256 7f0d3940926ca59245251b8c471d446741096fc35cbd4198d2b4ec4985029f35 SHA512 1a883e1b84ebc45fbe081135faaba61345790d5a2aa234fea49bc7aaf0167f0c7e10e4271da280d624b94b69189c856e29af028a299b72281594cdba9f9fb587 WHIRLPOOL 1e928fe5ca2c53de0766def8eabfd714d41e27594243f2abd89fdc9b570a21a37860d71be7f60c5c122495571df2604b1c1ce67520d462216224705694ba8703
 AUX pmw-1.3.2-install-no-docs.patch 493 SHA256 4511b359a315fc5c2c5c143622f32c227a620a2f916f94aee7dcea9d1cb95145 SHA512 57ebf52215166efec263f20b47d44895b53e627a26af434e2cb317372508fdfba496d8245fd8d466f7e32cedfefb1cb787363257123298319c69565c76c241e1 WHIRLPOOL 98178bcdf0a6d495228cf60f79f9c6b7a9b49d08c8166d0be778cb2385f836c2f2d8c1cd39a5eba26c5f64afac56e32e1da8418504c192fbe98b7efd2c1b62a2
@@ -7,26 +7,24 @@ DIST Pmw.1.3.2.tar.gz 399262 SHA256 0c9ab8f9cbd57f926e22253d73048fdccfb7e033c348
 DIST Pmw.1.3.3.tar.gz 451232 SHA256 0727bada8afe2e8844e95eb007f5331777389e23f9fce8f49c4864b153e4a494 SHA512 d63fad8f8c5bb9b8cb940b10bdf9e3bc1dabe714e10f32c587d5e1097ef0767492602984089172d85cf57c8ebf34acf555b8fe73a2157c6f734ee36042803668 WHIRLPOOL 6b0aaa767d8553637b2fa709f2f8c19f120ddb680fd8e68d6db77e82826f4ab6c5f872a0100371118486d8b07d43e177f2774c51a7ff4e4aa3825ebe3459abe3
 DIST Pmw.2.0.0.tar.gz 422125 SHA256 72bfdbb206a3853c9855bf8527e7720b3b28bdb79d810b49b208dfb964518ff8 SHA512 409b5ccdc8397b48c4d339e297c9729a1bc3f33c2b256d29b99c4c0e2e013d7aeae4b3089b22112b0d8d43dd8cd5208306afbcc4e9f6ab98005c16773aed7117 WHIRLPOOL 066f2851dafb9f8a1995b58378e0432e337d0f5f1170bd5d32a725d546f7de50e2ffa365ebb791404da2fe46d59e4b5c1c9638edc2163df77db04f095265de05
 EBUILD pmw-1.3.2-r2.ebuild 1300 SHA256 ab14a1ec9aa2a5136171314dc0f87d67d1ad463f80e92e90ede41ec5a8e2a5e1 SHA512 d19226129853fda6883c59253e135229cc927964f59cd62e2af52204a54e1669eef1ac29e22b512b8ccfe829adc6076ba92d83ea2145a3d19fa84a571b71e62f WHIRLPOOL 2d1b882d820be291ea1f79c393233ad49080e5884f73d9873a4eccaf6f646c7a6728dc896b4ed2f7e3a81eaf34f514a301575fafee11ead8c14fa8421a078ce6
-EBUILD pmw-1.3.3.ebuild 1500 SHA256 4643f0ea9051161137df696f10afb9e33bf33861209b1dbd205e576a8ffe04b6 SHA512 9e2b36b6ec4bd762d80d8afb45fb99ebede70d078b86b401ae23170e33fb9a0235ce25a7b1ac3b9c9f10a2798e082370b889e69abea08a655be3768517dd482c WHIRLPOOL cd66e9c37c02cde98a3fb250ddbaac2421181b6bd44f7906a16553799db3cbdb0278ae4388da3f5f9bfe5cd2551345fc4b1810d21adad4ccd324231eb01dde5b
-EBUILD pmw-2.0.0.ebuild 1391 SHA256 4c0eca7adc803ce66605303fc881ba8457cae246515c3e98bcfe7feb554b1e06 SHA512 1aa54203b45b2e72603d01c2ea81c9f3a592632871e583c61c03c55692155913324614edb811383d6918a628b13ef6dbc2bd78530c7b58cda247227d7e125e75 WHIRLPOOL e44897c2b42dffa86956222435694f34e2463ad7c528cdf65043dec43e30e44de340183d6fa3c2931d3baaee7df64107a72a4a2d66a9556f0faec1d02fca6c5a
-MISC ChangeLog 4724 SHA256 63d03a2006d75ff51d45e374ba11e78ca27f1948214d4c0ce6cc814823a101a4 SHA512 517daf8ae1488654359825b53cf3a7739018d7dc44e3a1441d98e689f75eac6625346d760be3a2c24c197b22451adaaea3fa575a7f7a6f8b6973304f07827d1f WHIRLPOOL 6ce0b10b9dd6c6f961c889ee21d1ab7e965b35924ce1a1e5ee4debfbd397ad673cbb53fc43303bf02e9c0e62b9df55a199590ace567e598fc8d230716cbd5ebf
+EBUILD pmw-1.3.3-r1.ebuild 1500 SHA256 aa981f4608dc923f6b446be98bcd2e759eddf332b9dbbee13cb1ead478749b02 SHA512 967c92fd5e5d89b60bca9956f67e52784dbf2aa521c07165b522d03a9245ea376e51ac7f5fd8fc973b80b16dce8ddb1cf328d9e7304d7a444fdd125bbe10c5f7 WHIRLPOOL e2b8a17f46d6e907406e590bedfb22f5bba6eb82f9dd77a4f601a07e0cdae240c26636c966b3eb6a400c5a90f66535d34e0389673581fe95d55c047336b65e66
+EBUILD pmw-2.0.0-r1.ebuild 1396 SHA256 78734129efd5bf0193c072ca1302e28d3257b55b07d900342c5b12279d3fee67 SHA512 035308cb1626bbd577ebb5453bb5d7ec29ad2e3395da9a2e3401e34452f15e37cc172ce015733f6b43767f7a9122e0eb0844106f5d580ea7c263ac5988d59fa3 WHIRLPOOL 7541b060cbcaef9e91ad2feb511e16c21532e4c39398ff2384942bc1eb2e92d844cb1824eb1a37f89f5e8f89911c2cc554450baf9dc82ed3e333fe22b1356544
+MISC ChangeLog 4923 SHA256 5803c1be8fa7e4cff637df1a9cf93c12888c46df10a5f8b7c6790e6c63941b7d SHA512 d22c38a27c47164d60e978ae64d25798d92449bdd39c5546de85efc34cf0ea21af0183e4bbc20c51057837e429a3e59cb2c1ec43915fb64464fd758648398e49 WHIRLPOOL b32f045f807b63faa89f9ce9eb347a114ebaf7280e89a03f42d4622f242f17ba06bc406891483c4e711901caef5f5f2248569d80442d72c12dd4f23211f43542
 MISC metadata.xml 161 SHA256 54c4e6d783f2571466c7b03622195c255b95cf06209e59ab6653a6366cdfde6e SHA512 b306d222517e4eae525f6a79634f26eff2068f85911b7904c52c485a004d1d5401300808da67f9a1e3f102d65aebd1e0d21cd18145ea0bfec156f2aa3785b104 WHIRLPOOL f9c8e8d23bde25f4b14031f83dcc09e8437fdbcbb27199c1e9d8109fb2ccc7589cabf8240256dbbe6e080d04d2c444d115c66f82fc9b479e1e70d1ef0fe60fe2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSKNKZXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOV8MP/3lR0GCwghCa7dKP7YDZYsgY
-DeUM/Cb0UttSxMjYxxlGF39eZ7/APNSxXdF0EZi1/qAitLO3i7Glvl1JWnKLTYR7
-wnZ60sNOAktP1bHJLN9ReSyqaWqfpAQcXVg4i135fqAbVsXq/dJn8f5I2/izPjg7
-i7iC8weZ/PL7XcB9stGDMUah1Bp3gss2tineFe5wo8rLVBVXnce9Vzd/31QMv60m
-kscTycKWhJ72sPJucguEkwmD/YsjEjcxYvXCx4zd3C5ZJo+21FlXZkBtC6llfqUq
-Fq5I0GdQUrd+eET8+SBC9c2X23LXPn9075g58hXrd5L0T+6CBLyP/DujUd4AG8Uj
-FFfiS+Jd/dwFp6WoW0sQExZcoBMkHmki/qA+5nw0kfTNaZB3qRojuCmTYQQyZLOy
-D35nHfIsBOkagRx+DmM9Tgn71m8YmxQsZ4wb5Eig7qiGLoQMrOGCxHbvD/B1nAjl
-uUrB6jU4Nl67NqUiCYf3vxgf3YaukUVlc0o/N14Vvf+HS6sh8ZHfKMmiBN6NjoEE
-8WzmDfVlnqFWZnNIlwRU8sL1Q9JOruaxkxv7k8msnwFKPzQbodqxkJa7vfKxMtQv
-uu7gMN8Qd8ypbrkp4jMPT2jhtT339mdIl8QO0QjX7iATOLymWwHv5eG9srl7vXR6
-lPe9aHd+o5b/d30ljbpy
-=a1rE
+iQIcBAEBCgAGBQJSQC5BAAoJELnU8jG9FVirfm0P/RtiQht3Ia6marimnanPZ+yP
+RpNyJGzErM4GeWZuG9WmbYlL0epLSxHjmEqwo0XwWi3JUXon52ryhIg/MJ5rtZM0
+Rc+KAL6j3ZwxXq8UvtT8XRb17do9/US7P55geUVEvpklt3hn3iOJOkuWR7s2R3TK
+rbi10mG+9Yvt23ST/4jbX/51UhmvNQo0NOyK4CCadnBAitzSy0Ynk6hHr4tU4Exr
+MbI+OuPcpiCabx+7yKVYAFk7hrusstlZY7Xso+NDayxiHTKStnZBJY2mPgdFVbp0
+OmB+Uh10pflE+jc1t7eM5itmU1QfwMkpAtef4IBb9oWwyZUkvc4zDqhxalrnCep1
+0UMOGBWYUEESL8wN9vx2/uR8hOWfivsM1IFlYnEpTvgT9Z0N3HIoryqJfRMGBv+w
+lV4i6XEqbEdPpog5Wm6CirymctaJM7E5ttdnITdrH7ysq9YX8a3KbrEYg/gYpsW4
+TDTUWiW2hgffQXpen42yoordBF1SPHxj1Te4w6oNSzucdmDlo2rfO05Yod9BDQHI
+U8mh2sTMchaEzUGpUyP+MUwQIhtziMgdTP3h9iZ0VJIV8HZGNXj7mFLS3wEhERH7
+IgL7ILjiCdhf0AOEwAdJPG2kwJMW8r5XEWOvSaKSm8SbV7d4h2DYB2b0KK7Af6Im
++fGgAfiqVgJKiwJn6cV3
+=dls+
 -----END PGP SIGNATURE-----
