@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pmw/pmw-2.0.0.ebuild,v 1.5 2013/09/05 18:46:47 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pmw/pmw-2.0.0-r1.ebuild,v 1.1 2013/09/23 12:04:30 jlec Exp $
 
 EAPI=5
 
@@ -56,5 +56,5 @@ python_install_all() {
 		doins "${DIR}"/demos/*
 	fi
 
-	distutils-r1_python_install
+	distutils-r1_python_install_all
 }
